# AOC2021

./: Cargo.toml
src/: day1-part1.rs  day1-part2.rs  day2-part1.rs  day2-part2.rs  dec1-2.rs  dec1.rs  dec2.rs
