[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dec1"
path = "src/dec1.rs"

[[bin]]
name = "dec1-2"
path = "src/dec1-2.rs"

[[bin]]
name = "dec2"
path = "src/dec2.rs"

[dependencies]
