[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1-part1"
path = "src/day1-part1.rs"
[[bin]]
name = "day1-part2"
path = "src/day1-part2.rs"

[[bin]]
name = "day2-part1"
path = "src/day2-part1.rs"
[[bin]]
name = "day2-part2"
path = "src/day2-part2.rs"


[dependencies]
